src/objects/Time_Allocation__c.object
<CustomObject>
    <fields>
        <fullName>Client__c</fullName>
        <label>Client</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bureau of Labor Statistics</fullName>
                </value>
                <value>
                    <fullName>Employment &amp; Training Administration</fullName>
                </value>
                <value>
                    <fullName>Mine Safety and Health Administration</fullName>
                </value>
                <value>
                    <fullName>Occupational Safety &amp; Health Admin.</fullName>
                </value>
                <value>
                    <fullName>Office of Asst. Secy. for Admin. &amp; Mgt.</fullName>
                </value>
                <value>
                    <fullName>Office of the Deputy Secretary</fullName>
                </value>
                <value>
                    <fullName>Office of the Inspector General</fullName>
                </value>
                <value>
                    <fullName>Solicitor of Labor</fullName>
                </value>
                <value>
                    <fullName>Wage and Hour Division</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Time Allocations</relationshipLabel>
        <relationshipName>Time_Allocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_a_working_day__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is a working day ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Matter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Matter</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Time Allocations</relationshipLabel>
        <relationshipName>Time_Allocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Timesheet_project__c</referenceTo>
        <relationshipLabel>Time Allocations</relationshipLabel>
        <relationshipName>Time_Allocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Statute__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Statute</label>
        <referenceTo>Statute__c</referenceTo>
        <relationshipLabel>Time Allocations</relationshipLabel>
        <relationshipName>Time_Allocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tasks__c</fullName>
        <label>Tasks</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Legal Services</fullName>
                </value>
                <value>
                    <fullName>Non-Legal Services</fullName>
                </value>
                <value>
                    <fullName>Training Program Related – Giving</fullName>
                </value>
                <value>
                    <fullName>Training Program Related – Participating</fullName>
                </value>
                <value>
                    <fullName>General Administration</fullName>
                </value>
                <value>
                    <fullName>Professional Development</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Time Allocation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>Matter__c</columns>
        <columns>Statute__c</columns>
        <columns>Tasks__c</columns>
        <columns>Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Allocations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>